Updated pom to include newer FIJI version

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,15 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
-
+target/
 # Package Files #
 *.jar
 *.war
 *.ear
+*.settings
+*.target
+*.project
+*.classpath
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
