--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 		<dependency>
 	 		<groupId>sc.fiji</groupId>
 	  		<artifactId>fiji-lib</artifactId>
-	  		<version>2.0.0-SNAPSHOT</version>
+	  		<version>2.1.0</version>
 		</dependency>		
 		<dependency>
 		  <groupId>net.imglib2</groupId>
