Updated version number in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
 	<groupId>PHANTAST</groupId>
 	<artifactId>PHANTAST_</artifactId>
-	<version>0.1-SNAPSHOT</version>
+	<version>0.2</version>
 
 	<name>Phase Contrast Segmentation Toolbox (PHANTAST)</name>
 
