POM: fix the SCM URLs
This project is a fork of minimal-ij1-plugin; it needs
to declare its SCM in the appropriate location.

--- a/pom.xml
+++ b/pom.xml
@@ -71,10 +71,10 @@
 	</repositories>
 
 	<scm>
-		<connection>scm:git:git://github.com/imagej/minimal-ij1-plugin</connection>
-		<developerConnection>scm:git:git@github.com:imagej/minimal-ij1-plugin</developerConnection>
+		<connection>scm:git:git://github.com/nicjac/PHANTAST-FIJI</connection>
+		<developerConnection>scm:git:git@github.com:nicjac/PHANTAST-FIJI</developerConnection>
 		<tag>HEAD</tag>
-		<url>https://github.com/imagej/minimal-ij1-plugin</url>
+		<url>https://github.com/nicjac/PHANTAST-FIJI</url>
 	</scm>
 
 	<organization>
